fix: created two folder for each exercise

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Dadi e email</title>
 </head>
 <body>
-    
-    <script type="text/javascript" src="./js/script.js"></script>
+    <!-- Esercizio Dadi  -->
+    <script type="text/javascript" src="./js-dice/script.js"></script>
+    <!-- /Esercizio Dadi  -->
+
+    <!-- Esercizio Mail  -->
+    <script type="text/javascript" src="./js-mail/script.js"></script>
+    <!-- /Esercizio Mail  -->
+
 </body>
 </html>
